fix(breadcrumbs): align icon

--- a/packages/components/_provisional/src/breadcrumbs/styles/item.module.scss
+++ b/packages/components/_provisional/src/breadcrumbs/styles/item.module.scss
@@ -1,7 +1,13 @@
 @use "@react-ck/text";
+@use "@react-ck/theme";
 
 .root {
   @include text.text-base;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: theme.get-spacing(0.5);
 
   &.active {
     @include text.text-skin(bold);
